task 8 finished: price circles done

--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -52,7 +52,16 @@
             <div class="all_places">
                 <!--First place-->
                 <article>
-                    <h2>My home</h2>
+                    <div class="square_header">
+                        <div class="empty_div"></div>
+                        <h2>My home</h2>
+                        <div class="price_by_night">
+                            <span class="circle">
+                                <p>$80</p>
+                            </span>
+                        </div>
+                    </div>
+
                     <div class="information">
                         <div class="max_guest">
                             <div class="guest_logo"></div>
@@ -87,7 +96,16 @@
 
                 <!--Second place-->
                 <article>
-                    <h2>Tiny House</h2>
+                    <div class="square_header">
+                        <div class="empty_div"></div>
+                        <h2>Tiny House</h2>
+                        <div class="price_by_night">
+                            <span class="circle">
+                                <p>$65</p>
+                            </span>
+                        </div>
+                    </div>
+
                     <div class="information">
                         <div class="max_guest">
                             <div class="guest_logo"></div>
@@ -119,7 +137,16 @@
 
                 <!--Third place-->
                 <article>
-                    <h2>A suite</h2>
+                    <div class="square_header">
+                        <div class="empty_div"></div>
+                        <h2>A suite</h2>
+                        <div class="price_by_night">
+                            <span class="circle">
+                                <p>$190</p>
+                            </span>
+                        </div>
+                    </div>
+
                     <div class="information">
                         <div class="max_guest">
                             <div class="guest_logo"></div>
